src/components/common/Sidebar/sidebar.scss
.SidebarWrapper {
  @apply transition-transform duration-300 ease-in-out;

  .navLink {
    padding: 10px 22px;
    * {
      @apply text-white;
      @apply font-bold;
    }
    &.active {
      @apply bg-white;
      @apply rounded-medium;
      * {
        @apply text-purple-100;
        @apply font-bold;
      }
    }
  }
  .sidebar-scrollbar {
    &::-webkit-scrollbar {
      width: 4px; /* Width of the scrollbar */
      height: 4px;
    }

    &::-webkit-scrollbar-track {
      @apply bg-purple-light; 
      border-radius: 5px; 
    }

    &::-webkit-scrollbar-thumb {
      background: rgba(0, 0, 0, 0.295); /* Color of the scrollbar handle */
      border-radius: 5px; 
    }
  }
}

